Revert to old project structure.