@@ -32,12 +32,8 @@
   <artifactId>persistencelite</artifactId>
   <name>PersistenceLite</name>
   <url>https://github.com/grevend/PersistenceLite</url>
-  <modules>
-    <module>AnnotationProcessors</module>
-    <module>Framework</module>
-  </modules>
-  <version>0.3.3-SNAPSHOT</version>
-  <packaging>pom</packaging>
+  <version>0.3.9-SNAPSHOT</version>
+  <packaging>jar</packaging>
 
   <distributionManagement>
     <repository>
@@ -121,5 +117,50 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <source>14</source>
+          <target>14</target>
+          <showWarnings>true</showWarnings>
+          <!--<verbose>true</verbose>-->
+          <compilerArgs>
+            <arg>--enable-preview</arg>
+            <!--<arg>-processor</arg>
+            <arg>grevend.persistencelite.builder.EntityBuilderProcessor</arg>-->
+          </compilerArgs>
+          <forceJavacCompilerUse>true</forceJavacCompilerUse>
+          <!--<generatedSourcesDirectory>
+            ${project.build.directory}/generated-sources/
+          </generatedSourcesDirectory>
+          <annotationProcessorPaths>
+            <annotationProcessorPath>
+              <artifactId>persistencelite-annotationprocessors</artifactId>
+              <groupId>grevend</groupId>
+              <version>0.3.3-SNAPSHOT</version>
+            </annotationProcessorPath>
+          </annotationProcessorPaths>-->
+          <!--<annotationProcessors>
+            <annotationProcessor>
+              grevend.persistencelite.builder.EntityBuilderProcessor
+            </annotationProcessor>
+          </annotationProcessors>-->
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M4</version>
+        <configuration>
+          <argLine>--enable-preview</argLine>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
